Moved Daily Setup under Project Description

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -63,11 +63,8 @@
         <ion-item nav-clear menu-close href='#/app/manage-project'>
           Manage
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/project'>
+        <ion-item nav-clear menu-close href='#/app/description'>
           Description
-        </ion-item>
-        <ion-item nav-clear menu-close href='#/app/daily-setup'>
-          Daily Setup
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/tools'>
           Tools
