--- a/www/app/map/archive-tiles.html
+++ b/www/app/map/archive-tiles.html
@@ -4,7 +4,15 @@
   </ion-nav-buttons>
   <ion-content class='padding has-header'>
 
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
+    <ion-input class='item item-input item-select item-text-wrap'
+               ng-show='vm.showSelectName'>
+      <ion-label>Select a Map</ion-label>
+      <select ng-model='vm.selectedName'
+              ng-options='map.name for map in vm.maps | orderBy: "-date"'
+              ng-change='vm.nameSelectChanged()'>
+      </select>
+    </ion-input>
+    <ion-input ng-show='vm.showNameField' class='item item-input item-stacked-label item-text-wrap'>
       <ion-label>Map Name</ion-label>
       <input type='text' ng-model='vm.map.name' autofocus>
     </ion-input>
@@ -28,10 +36,11 @@
     <b>Number of tiles to download: {{ vm.tiles.need.length }} <br></b>
 
     <button class='button button-block button-positive' ng-click='vm.submit()'
-            ng-disabled='!vm.map.name || vm.downloading'>
+            ng-disabled='vm.downloading'>
       {{ vm.submitBtnText }}
     </button>
-    *Offline Maps are loaded automatically when offline. Edit and delete options for Saved Maps will be available under the Offline Maps menu item.
+    *Offline Maps are loaded automatically when offline. Edit and delete options for Saved Maps will be available under
+    the Offline Maps menu item.
 
     <div ng-show='vm.map.percentDownload >= 0 || vm.map.saveStatus'>
       <br>
