added sample number to preferences

--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -75,7 +75,7 @@ navigation history that also transitions its views in and out.
     </span>
     <span>
       <a class='button button-clear spot-tab-inactive'
-         href='#/app/preferences'>
+         ng-click='vm.submit("/app/preferences");'>
         More
       </a>
     </span>
