added copy orientation

--- a/www/app/spot/orientation-popover.html
+++ b/www/app/spot/orientation-popover.html
@@ -1,8 +1,8 @@
 <ion-popover-view class='fit'>
   <ion-content scroll='false'>
     <ion-list>
-      <ion-item ng-click='vm.copyThisSpot()'>
-        <i class="icon ion-ios-copy"></i> Copy this Spot
+      <ion-item ng-click='vm.copyThisOrientation()'>
+        <i class="icon ion-ios-copy"></i> Copy this Orientation
       </ion-item>
     </ion-list>
   </ion-content>
