--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,7 @@
     <script src="app/app.config.js"></script>
 
     <!-- ng controllers -->
+    <script src="app/about/about.controller.js"></script>
     <script src="app/debug/debug.controller.js"></script>
     <script src="app/map/archive-tiles.controller.js"></script>
     <script src="app/map/image-basemap.controller.js"></script>
