--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -42,7 +42,7 @@
       Notes
     </div>
     <ion-input class='item item-input'>
-      <textarea class='padding-left' placeholder='Notes about these images as a whole ...' rows='12'
+      <textarea class='padding-left' placeholder='Notes about all images above ...' rows='12'
                 ng-model='vm.spot.properties.images_notes'></textarea>
     </ion-input>
   </ion-content>
