added tags to project

--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -1,6 +1,6 @@
 <form name='straboForm' novalidate=''>
   <ion-view>
-    <ion-content class="strabo-form">
+    <ion-content class='strabo-form'>
       <ion-input class='item item-input item-stacked-label item-text-wrap'>
         <ion-label>Spot Name</ion-label>
         <input type='text' placeholder='Name this Spot' ng-model='vm.spot.properties.name'>
