--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,8 @@
     <script src="app/project/manage-project.controller.js"></script>
     <script src="app/project/preferences.controller.js"></script>
     <script src="app/project/rock-unit.controller.js"></script>
+    <script src="app/project/tag.controller.js"></script>
+    <script src="app/project/tags.controller.js"></script>
     <script src="app/project/tools.controller.js"></script>
     <script src="app/spot/spot.controller.js"></script>
     <script src="app/spot/spots.controller.js"></script>
