--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -45,6 +45,9 @@
         <ion-item nav-clear menu-close href='#/app/spots'>
           Spots
         </ion-item>
+        <ion-item nav-clear menu-close href='#/app/tags'>
+          Tag Groups
+        </ion-item>
         <div class='field-group item item-divider'>
           Maps
         </div>
