--- a/www/app/project/tag.html
+++ b/www/app/project/tag.html
@@ -1,13 +1,36 @@
-<form name='straboForm' novalidate=''>
-  <ion-view title='Tag'>
-    <ion-nav-buttons side='left'>
-      <button ng-hide='vm.currentSpot' ng-click='vm.go("/app/tags");'
-              class='button button-icon icon ion-arrow-left-c'></button>
-      <button ng-show='vm.currentSpot' ng-click='vm.submit("/app/spotTab/" + vm.currentSpot.properties.id + "/spot");'
-              class='button button-icon icon ion-arrow-left-c'></button>
-    </ion-nav-buttons>
-    <ion-content class='has-header'>
-      <auto-fields/>
-    </ion-content>
-  </ion-view>
-</form>
+<ion-view title='Tag Group'>
+  <ion-nav-buttons side='left'>
+    <button ng-hide='vm.currentSpot' ng-click='vm.go("/app/tags");'
+            class='button button-icon icon ion-arrow-left-c'></button>
+    <button ng-show='vm.currentSpot' ng-click='vm.submit("/app/spotTab/" + vm.currentSpot.properties.id + "/spot");'
+            class='button button-icon icon ion-arrow-left-c'></button>
+  </ion-nav-buttons>
+  <ion-content class='has-header divider-buttons-right'>
+    <div>
+      <form name='straboForm' novalidate=''>
+        <auto-fields/>
+      </form>
+    </div>
+    <br><br>
+    <div class='field-group item item-divider'>
+      {{ vm.data.spots.length || 0 }}
+      <span ng-if='vm.data.spots.length > 1 || !vm.data.spots.length'>Spots</span>
+      <span ng-if='vm.data.spots.length === 1'>Spot</span>
+      <i class='button button-icon ion-plus' ng-click='vm.addSpot()'></i>
+    </div>
+    <div ng-show='!vm.data.spots || vm.data.spots.length === 0' class='padding'>
+      No Spots with this Tag yet. Add Spots by using the '+' button to the right.
+    </div>
+    <ion-list>
+      <ion-item class='item-text-wrap item-button-right'
+                ng-repeat='spotId in vm.data.spots'
+                ng-click='vm.goToSpot(spotId)'>
+        {{ vm.getSpotName(spotId) }}
+        <button class='button button-clear button-assertive'
+                ng-click='vm.removeSpot(spot)'>
+          <i class='icon ion-minus-circled'></i>
+        </button>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-view>
