add tags to spots, fixed generating random spots

--- a/www/app/project/tag.html
+++ b/www/app/project/tag.html
@@ -27,7 +27,7 @@
                 ng-click='vm.goToSpot(spotId)'>
         {{ vm.getSpotName(spotId) }}
         <button class='button button-clear button-assertive'
-                ng-click='vm.removeSpot(spot)'>
+                ng-click='vm.removeSpot(spotId)'>
           <i class='icon ion-minus-circled'></i>
         </button>
       </ion-item>
