--- a/www/app/debug/debug.html
+++ b/www/app/debug/debug.html
@@ -21,8 +21,8 @@
       <span class='button-text-big'>Start</span>
     </button>
 
-    <div class='padding' ng-show='vm.pointsGenerated'>
-      Points generated: {{ vm.pointsGenerated }}
+    <div class='padding' ng-show='vm.msg'>
+      {{ vm.msg }}
     </div>
 
     <div class='field-group item item-divider'>
