--- a/www/app/project/add-spot-modal.html
+++ b/www/app/project/add-spot-modal.html
@@ -4,13 +4,9 @@
       <span class='icon ion-arrow-left-c'></span>
     </button>
     <h1 class='title'>Add Spots to Tag</h1>
-    <button class='button icon ion-close-round button-clear'
-            ng-click='vm.closeModal()'
-            ng-show='vm.showExitProjectModal'>
-    </button>
   </ion-header-bar>
   <ion-content class='has-header'>
-    <div class='padding' ng-show='vm.spotsspotsDisplayed.length === 0'>
+    <div class='padding' ng-show='vm.spotsDisplayed.length === 0'>
       No Spots in your active datasets.
     </div>
     <ion-checkbox class='item-text-wrap item-button-right'
