--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
     <script src="app/spot/other-features-tab.controller.js"></script>
     <script src="app/spot/samples-tab.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
+    <script src="app/spot/tags-tab.controller.js"></script>
 
     <!-- ng factories -->
     <script src="app/data-models/data-models.factory.js"></script>
