--- a/www/app/spot/3dstructures-tab.html
+++ b/www/app/spot/3dstructures-tab.html
@@ -1,7 +1,34 @@
-<form name='straboForm' novalidate=''>
-  <ion-view>
-    <ion-content>
-      <auto-fields/>
-    </ion-content>
-  </ion-view>
-</form>
+<ion-view>
+  <ion-content>
+    <button ng-click='vmChild.add3dStructure("fabric")'
+            class='button button-clear button-positive'>
+      <i class='icon ion-plus-circled'></i>
+      <span class='button-text-big'>Add a Fabric</span>
+    </button>
+    <button ng-click='vmChild.add3dStructure("fold")'
+            class='button button-clear button-positive'>
+      <i class='icon ion-plus-circled'></i>
+      <span class='button-text-big'>Add a Fold</span>
+    </button>
+    <button ng-click='vmChild.add3dStructure("tensor")'
+            class='button button-clear button-positive'>
+      <i class='icon ion-plus-circled'></i>
+      <span class='button-text-big'>Add a Tensor</span>
+    </button>
+    <button ng-click='vmChild.add3dStructure("other")'
+            class='button button-clear button-positive'>
+      <i class='icon ion-plus-circled'></i>
+      <span class='button-text-big'>Add Other</span>
+    </button>
+    <ion-list>
+      <ion-item class='item-text-wrap item-button-right'
+                ng-repeat='_3dStructure in vm.spot.properties._3d_structures | orderBy: "label" track by _3dStructure.id'
+                ng-click='vmChild.edit3dStructure(_3dStructure)'>
+        {{ _3dStructure.label }}
+        <button class='button button-clear button-assertive' ng-click='vmChild.delete3dStructure(_3dStructure)'>
+          <i class='icon ion-minus-circled'></i>
+        </button>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-view>
