--- a/www/app/spot/samples-tab.html
+++ b/www/app/spot/samples-tab.html
@@ -9,7 +9,7 @@
       <ion-item class='item-text-wrap item-button-right'
                 ng-click='vmChild.editSample($index)'
                 ng-repeat='sample in vm.spot.properties.samples'>
-        <b>{{ sample.sample_id_name }}</b>
+        {{ sample.sample_id_name }}
         <button class='button button-clear button-assertive' ng-click='vmChild.deleteSample($index)'>
           <i class='icon ion-minus-circled'></i>
         </button>
