--- a/www/app/project/add-spot-modal.html
+++ b/www/app/project/add-spot-modal.html
@@ -4,10 +4,14 @@
       <span class='icon ion-arrow-left-c'></span>
     </button>
     <h1 class='title'>Add Spots to Tag</h1>
+    <button class='button button-icon ion-funnel button-positive' ng-click='vm.filter()'></button>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='padding' ng-show='vm.spotsDisplayed.length === 0'>
       No Spots in your active datasets.
+    </div>
+    <div class='padding-left filter-on' ng-show='vm.filterOn'>
+      Results are being filtered.
     </div>
     <ion-checkbox class='item-text-wrap item-button-right'
                   ng-repeat='spot in vm.spotsDisplayed track by spot.properties.id'
