--- a/www/index.html
+++ b/www/index.html
@@ -38,8 +38,7 @@
     <script src="lib/ol3/ol3-layerswitcher.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
-    <!-- <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
 
     <!-- local storage with localForage and SQLite Driver -->
     <script src="lib/localforage/dist/localforage.js"></script>
