--- a/www/app/about/about.html
+++ b/www/app/about/about.html
@@ -9,7 +9,7 @@
       The entire Strabo Spot project is still in development and as such the mobile app is not yet in the Google Play
       Store or the iOS App Store but can be tested by accessing it as described below.
       <br><br>
-      Current Version 0.11.4
+      Current Version 0.11.5
       <br><br>
       <!--<div ng-hide='vm.isWeb'>
         <button ng-click='vm.checkForUpdates()'
@@ -34,7 +34,7 @@
       <h5>Downloading the Mobile App</h5>
       <hr>
       <a href='#'
-         onclick='window.open("http://strabospot.org/download", "_system", "location=yes"); return false;'>http://strabospot.org/download</a>
+         onclick='window.open("https://build.phonegap.com/apps/1289076/share", "_system", "location=yes"); return false;'>https://build.phonegap.com/apps/1289076/share</a>
       <br><br>
       **Note for iOS users:**<br>
       The link above will not work for iOS devices unless your device has been previously registered as a valid
