refactored orientation tab to use modals like samples and 3d structures

--- a/www/app/about/about.html
+++ b/www/app/about/about.html
@@ -34,7 +34,7 @@
       <h5>Downloading the Mobile App</h5>
       <hr>
       <a href='#'
-         onclick='window.open("https://build.phonegap.com/apps/1289076/share", "_system", "location=yes"); return false;'>https://build.phonegap.com/apps/1289076/share</a>
+         onclick='window.open("http://strabospot.org/download", "_system", "location=yes"); return false;'>http://strabospot.org/download</a>
       <br><br>
       **Note for iOS users:**<br>
       The link above will not work for iOS devices unless your device has been previously registered as a valid
