--- a/www/app/spot/orientation-data-tab.html
+++ b/www/app/spot/orientation-data-tab.html
@@ -1,80 +1,53 @@
 <ion-view>
   <ion-content>
-    <button ng-click='vmChild.addPlane();' class='button button-clear button-positive'>
+    <button ng-click='vmChild.addOrientation("planar_orientation");' class='button button-clear button-positive'>
       <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Add a Plane</span>
     </button>
-    <button ng-click='vmChild.addLine();' class='button button-clear button-positive'>
+    <button ng-click='vmChild.addOrientation("linear_orientation");' class='button button-clear button-positive'>
       <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Add a Line</span>
     </button>
-    <button ng-click='vmChild.addTabularZone();' class='button button-clear button-positive'>
+    <button ng-click='vmChild.addOrientation("tabular_orientation");' class='button button-clear button-positive'>
       <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Add a Tabular Zone</span>
     </button>
     <ion-list>
       <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='orientation in vm.spot.properties.orientation_data track by $index'
-                ng-init='orientationIndex = $index'>
-        <div ng-click='vmChild.goToOrientation(orientationIndex)'>
-            <span ng-if='orientation.orientation_type === "linear_orientation"' class='orientation-text'>
-              {{ orientationIndex+1 }}: Measured Line</span>
-            <span ng-if='orientation.orientation_type === "planar_orientation"' class='orientation-text'>
-              {{ orientationIndex+1 }}: Measured Plane</span>
-            <span ng-if='orientation.orientation_type === "tabular_zone_orientation"' class='orientation-text'>
-              {{ orientationIndex+1 }}: Measured Tabular Zone</span>
-          <span class="orientation-name">(Name: {{ orientation.name }})</span>
-          <br>
-          <span ng-if='orientation.strike'>Strike: {{ orientation.strike }}</span>
-          <span ng-if='orientation.dip_direction'>Dip Direction: {{ orientation.dip_direction }}</span>
-          <span ng-if='orientation.dip'>Dip: {{ orientation.dip }}</span>
-          <span ng-if='orientation.trend'>Trend: {{ orientation.trend }}</span>
-          <span ng-if='orientation.plunge'>Plunge: {{ orientation.plunge }}</span>
-          <span ng-if='orientation.feature_type'>
-            Feature Type: {{ vmChild.featureTypeLabel(orientation.feature_type) }}</span>
+                ng-repeat='orientation in vm.spot.properties.orientation_data |
+                 orderBy: "label" track by orientation.id'>
+        <div ng-click='vmChild.editOrientation(orientation)'>
+          <b>{{ orientation.label }}</b>
         </div>
-        <button class='button button-clear button-assertive' ng-click='vmChild.deleteOrientation(orientationIndex)'>
+        <button class='button button-clear button-assertive' ng-click='vmChild.deleteOrientation(orientation)'>
           <i class='icon ion-minus-circled'></i>
         </button>
-        <div ng-if='orientation.associated_orientation'>
-          <ion-item class='item-text-wrap item-button-right'
-                    ng-repeat='associated_orientation in orientation.associated_orientation track by $index'
-                    ng-init='associatedOrienationIndex = $index'>
-            <div ng-click='vmChild.goToAssociatedOrientation(orientationIndex, associatedOrienationIndex)'>
-                <span ng-if='associated_orientation.orientation_type === "linear_orientation"' class='orientation-text'>
-                  Associated Measured Line</span>
-                <span ng-if='associated_orientation.orientation_type === "planar_orientation"' class='orientation-text'>
-                  Associated Measured Plane</span>
-                <span ng-if='associated_orientation.orientation_type === "tabular_zone_orientation"'
-                      class='orientation-text'>
-                  Associated Measured Tabular Zone</span>
-              <span class="orientation-name">(Name: {{ associated_orientation.name }})</span>
-              <br>
-              <span ng-if='associated_orientation.strike'>Strike: {{ associated_orientation.strike }}</span>
-              <span ng-if='associated_orientation.dip_direction'>Dip Direction: {{ associated_orientation.dip_direction }}</span>
-              <span ng-if='associated_orientation.dip'>Dip: {{ associated_orientation.dip }}</span>
-              <span ng-if='associated_orientation.trend'>Trend: {{ associated_orientation.trend }}</span>
-              <span ng-if='associated_orientation.plunge'>Plunge: {{ associated_orientation.plunge }}</span>
-              <span ng-if='associated_orientation.feature_type'>
-                Feature Type: {{ vmChild.featureTypeLabel(associated_orientation.feature_type) }}</span>
+       <div ng-if='orientation.associated_orientation'>
+         <br>
+         <span>Associated Orientations:</span>
+         <hr>
+          <ion-item class='item-text-wrap item-borderless item-button-right'
+                    ng-repeat='associatedOrientation in orientation.associated_orientation |
+                     orderBy: "label" track by associatedOrientation.id'>
+            <div ng-click='vmChild.editAssociatedOrientation(orientation, associatedOrientation)'>
+              {{ associatedOrientation.label }}
             </div>
             <button class='button button-clear button-assertive'
-                    ng-click='vmChild.deleteAssociatedOrientation(orientationIndex, associatedOrienationIndex)'>
+                    ng-click='vmChild.deleteAssociatedOrientation(orientation, associatedOrientation)'>
               <i class='icon ion-minus-circled'></i>
             </button>
           </ion-item>
         </div>
 
-        <div ng-if='orientation.orientation_type === "linear_orientation"'>
-          <button ng-click='vmChild.addAssociatedPlane(orientationIndex);'
+        <div ng-if='orientation.type === "linear_orientation"'>
+          <button ng-click='vmChild.addAssociatedOrientation(orientation, "planar_orientation");'
                   class='button button-small button-clear button-positive'>
             <i class='icon ion-plus-circled'></i>
             <span class='button-text-small'>Add an Associated Planar Feature</span>
           </button>
         </div>
-        <div ng-if='orientation.orientation_type === "planar_orientation" ||
-           orientation.orientation_type === "tabular_zone_orientation" '>
-          <button ng-click='vmChild.addAssociatedLine(orientationIndex);'
+        <div ng-if='orientation.type === "planar_orientation" || orientation.type === "tabular_orientation" '>
+          <button ng-click='vmChild.addAssociatedOrientation(orientation, "linear_orientation");'
                   class='button button-small button-clear button-positive'>
             <i class='icon ion-plus-circled'></i>
             <span class='button-text-small'>Add an Associated Linear Feature</span>
