--- a/www/app/spot/orientation-data-tab.html
+++ b/www/app/spot/orientation-data-tab.html
@@ -19,23 +19,33 @@
         <div ng-click='vmChild.editOrientation(orientation)'>
           <b>{{ orientation.label }}</b>
         </div>
-        <button class='button button-clear button-assertive' ng-click='vmChild.deleteOrientation(orientation)'>
-          <i class='icon ion-minus-circled'></i>
-        </button>
-       <div ng-if='orientation.associated_orientation'>
-         <br>
-         <span>Associated Orientations:</span>
-         <hr>
+        <div class='buttons'>
+          <button class='button button-clear button-dark' ng-click='vmChild.copyOrientation(orientation)'>
+            <i class='icon ion-ios-copy-outline'></i>
+          </button>
+          <button class='button button-clear button-assertive' ng-click='vmChild.deleteOrientation(orientation)'>
+            <i class='icon ion-minus-circled'></i>
+          </button>
+        </div>
+        <div ng-if='orientation.associated_orientation'>
+          <br>
+          <span>Associated Orientations:</span>
+          <hr>
           <ion-item class='item-text-wrap item-borderless item-button-right'
                     ng-repeat='associatedOrientation in orientation.associated_orientation |
                      orderBy: "label" track by associatedOrientation.id'>
             <div ng-click='vmChild.editAssociatedOrientation(orientation, associatedOrientation)'>
               {{ associatedOrientation.label }}
             </div>
-            <button class='button button-clear button-assertive'
-                    ng-click='vmChild.deleteAssociatedOrientation(orientation, associatedOrientation)'>
-              <i class='icon ion-minus-circled'></i>
-            </button>
+            <div class='buttons'>
+              <button class='button button-clear button-dark' ng-click='vmChild.copyAssociatedOrientation(orientation, associatedOrientation)'>
+                <i class='icon ion-ios-copy-outline'></i>
+              </button>
+              <button class='button button-clear button-assertive'
+                      ng-click='vmChild.deleteAssociatedOrientation(orientation, associatedOrientation)'>
+                <i class='icon ion-minus-circled'></i>
+              </button>
+            </div>
           </ion-item>
         </div>
 
