create a new tag while within a Spot

--- a/www/app/project/tag.html
+++ b/www/app/project/tag.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side='left'>
     <button ng-hide='vm.currentSpot' ng-click='vm.go("/app/tags");'
             class='button button-icon icon ion-arrow-left-c'></button>
-    <button ng-show='vm.currentSpot' ng-click='vm.submit("/app/spotTab/" + vm.currentSpot.properties.id + "/spot");'
+    <button ng-show='vm.currentSpot' ng-click='vm.go("/app/spotTab/" + vm.currentSpot.properties.id + "/tags");'
             class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-content class='has-header divider-buttons-right'>
