--- a/www/app/spot/add-tag-modal.html
+++ b/www/app/spot/add-tag-modal.html
@@ -4,10 +4,13 @@
       <span class='icon ion-arrow-left-c'></span>
     </button>
     <h1 class='title'>Add Tags to Spot</h1>
+    <button class='button button-icon' ng-click='vmChild.createTag()'>
+      <span class='icon ion-plus'></span>
+    </button>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='padding' ng-show='vmChild.allTags.length === 0'>
-      No Tags created yet.
+      No Tags created yet. Create a new tag by using the '+' button in the top right.
     </div>
     <ion-checkbox class='item-text-wrap item-button-right'
                   ng-repeat='tag in vmChild.allTags | orderBy:"name" track by tag.id'
