--- a/www/app/spot/tags-tab.html
+++ b/www/app/spot/tags-tab.html
@@ -2,10 +2,10 @@
   <ion-content>
     <button ng-click='vmChild.addTag();' class='button button-clear button-positive'>
       <i class='icon ion-plus-circled'></i>
-      <span class='button-text-big'>Add a Tag</span>
+      <span class='button-text-big'>Add/Remove a Tag</span>
     </button>
     <div class='padding' ng-show='vmChild.tags.length === 0'>
-      No Tag Groups added yet. Add a tag using the '+' button above.
+      No Tags added to this Spot yet.
     </div>
     <ion-list>
       <ion-item class='item-text-wrap item-button-right'
