--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -24,13 +24,17 @@
             </button>
         </ion-item>
       </ion-list>
-      <div class='padding'>
+      <div class='padding' ng-show='vm.maps.length > 1'>
         Total Number of Saved Tiles: {{ vm.numOfflineTiles }} <br>
-        Total Size of Saved Tiles: {{ vm.offlineTilesSize | normalizeBytes }} <br>
+        <!-- Total Size of Saved Tiles: {{ vm.offlineTilesSize | normalizeBytes }} <br>
         <small>Note some tiles may be used in more than one saved map so the total number and total size of saved tiles
           is not simply a sum of the individual map properties. Deleting an individual map will only delete those tiles
           not used in any other map.
-        </small>
+        </small> -->
+        <small>Note some tiles may be used in more than one saved map so the total number of saved tiles
+        is not necessarily simply a sum the number of tiles above. Deleting a saved map will only delete those tiles
+        not used in any other map.
+      </small>
       </div>
     </div>
   </ion-content>
