--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -5,18 +5,6 @@
         <ion-label>Spot Name</ion-label>
         <input type='text' placeholder='Name this Spot' ng-model='vm.spot.properties.name'>
       </ion-input>
-      <ion-input class='item item-input item-stacked-label item-text-wrap'>
-        <ion-label>ID</ion-label>
-        <input type='number' disabled ng-model='vm.spot.properties.id'>
-      </ion-input>
-      <ion-input class='item item-input item-stacked-label item-text-wrap'>
-        <ion-label>Date</ion-label>
-        <input type='date' ng-model='vm.spot.properties.date'>
-      </ion-input>
-      <ion-input class='item item-input item-stacked-label item-text-wrap'>
-        <ion-label>Time</ion-label>
-        <input type='time' ng-model='vm.spot.properties.time'>
-      </ion-input>
 
       <div class='item item-divider'>
         Geography
@@ -154,6 +142,23 @@
       <ion-input class='item item-input'>
         <textarea placeholder='Notes about this Spot' rows='12' ng-model='vm.spot.properties.notes'></textarea>
       </ion-input>
+
+      <div class='item item-divider'>
+        Other
+      </div>
+      <ion-input class='item item-input item-stacked-label item-text-wrap'>
+        <ion-label>ID</ion-label>
+        <input type='number' disabled ng-model='vm.spot.properties.id'>
+      </ion-input>
+      <ion-input class='item item-input item-stacked-label item-text-wrap'>
+        <ion-label>Date</ion-label>
+        <input type='date' ng-model='vm.spot.properties.date'>
+      </ion-input>
+      <ion-input class='item item-input item-stacked-label item-text-wrap'>
+        <ion-label>Time</ion-label>
+        <input type='time' ng-model='vm.spot.properties.time'>
+      </ion-input>
+
     </ion-content>
   </ion-view>
 </form>
