--- a/www/app/spot/spots.html
+++ b/www/app/spot/spots.html
@@ -24,6 +24,11 @@
       <ion-item class='item-text-wrap item-button-right'
                 ng-repeat='spot in vm.spotsDisplayed track by spot.properties.id'
                 ng-click='vm.goToSpot(spot.properties.id)'>
+        <img ng-if="spot.geometry.type === 'Point'" class='geometry-icon' src='img/point.png'>
+        <img ng-if="spot.geometry.type === 'LineString'" class='geometry-icon' src='img/line.png'>
+        <img ng-if="spot.geometry.type === 'Polygon'" class='geometry-icon' src='img/polygon.png'>
+        <img ng-if="spot.geometry.type !== 'Point' && spot.geometry.type !== 'LineString' &&
+         spot.geometry.type !== 'Polygon'" class='geometry-icon' src='img/question.png'>
         {{spot.properties.name}}
         <button class='button button-clear button-assertive'
                 ng-click='vm.deleteSpot(spot)'>
