removed mapquest basemaps

--- a/www/app/map/archive-tiles.html
+++ b/www/app/map/archive-tiles.html
@@ -29,6 +29,7 @@
 
     <br>
     Current zoom level: {{ vm.map.currentZoom }}<br>
+    Max zoom level available: {{ vm.map.maxZoom }}<br>
     Total number of saved offline tiles: {{vm.numOfflineTiles}}<br>
     Total number of tiles requested: {{ vm.tiles.saved.length + vm.tiles.need.length }} <br>
     Number of requested tiles already saved: {{ vm.tiles.saved.length }} <br>
