added map editing functionality

--- a/www/app/map/map.html
+++ b/www/app/map/map.html
@@ -14,6 +14,7 @@
     </ion-nav-buttons>
   <ion-pane data-tap-disabled='true'>
     <div id='mapdiv' style='height:100%'></div>
+    <div class='saveEdits' ng-show='vm.showSaveEditsBtn' ng-click='vm.saveEdits()'>{{ vm.saveEditsText }}</div>
     <div id='zoomInfo'>Zoom: {{ vm.currentZoom }}</div>
     </ion-pane>
 </ion-view>
