--- a/www/app/map/image-basemap.html
+++ b/www/app/map/image-basemap.html
@@ -8,6 +8,6 @@
   </ion-nav-buttons>
   <ion-pane data-tap-disabled='true'>
     <div id='mapdiv' style='height:100%'></div>
-    <div id='zoomInfo'>zoom: {{currentZoom}}</div>
+    <div class='saveEdits' ng-show='vm.showSaveEditsBtn' ng-click='vm.saveEdits()'>{{ vm.saveEditsText }}</div>
   </ion-pane>
 </ion-view>
