moved view map button in spot to toolbar

--- a/www/app/map/map.html
+++ b/www/app/map/map.html
@@ -6,7 +6,7 @@
             class='button button-icon icon ion-arrow-left-c'></button>
     </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button ng-hide='vm.currentSpot' ng-click='vm.toggleLocation()'
+    <button ng-click='vm.toggleLocation()'
             ng-class='{"button button-icon icon ion-pinpoint": !vm.locationOn, "button button-icon icon ion-android-locate": vm.locationOn}'></button>
     <button ng-click='vm.popover.show($event)'
             class='button button-icon icon ion-more rotate-90'></button>
