--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -12,6 +12,7 @@ navigation history that also transitions its views in and out.
     <button ng-click='vm.goBack()' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
+    <button ng-click='vm.viewMap()' class='button button-icon icon ion-map'></button>
     <button ng-click='vm.deleteSpot()' class='button button-icon icon ion-trash-b'></button>
     <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
