add custom maps from mapbox

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -57,8 +57,11 @@
         <ion-item nav-clear menu-close href='#/app/image-basemaps'>
           Image Basemaps
         </ion-item>
+        <ion-item nav-clear menu-close href='#/app/other-maps'>
+          Other Basemaps
+        </ion-item>
         <ion-item nav-clear menu-close href='#/app/offlinemap'>
-          Offline Maps
+          Offline Basemaps
         </ion-item>
         <div class='field-group item item-divider'>
           Project
