--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -46,6 +46,10 @@
         <ion-label>Name</ion-label>
         <input type='text' placeholder='John Doe' ng-model='vm.data.name'>
       </ion-input>
+      <label class='item item-input item-stacked-label item-text-wrap'>
+        <span class='input-label'>Mapbox Access Token</span>
+        <input type='text' placeholder='Find the token under API access tokens in your Mapbox account.' ng-model='vm.data.mapboxToken'>
+      </label>
     </div>
   </ion-content>
 </ion-view>
