--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,7 @@
     <script src="app/map/image-basemaps.controller.js"></script>
     <script src="app/map/map.controller.js"></script>
     <script src="app/map/offline-map.controller.js"></script>
+    <script src="app/map/other-maps.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/project/description.controller.js"></script>
     <script src="app/project/manage-project.controller.js"></script>
@@ -99,6 +100,7 @@
     <script src="app/map/map-setup.factory.js"></script>
     <script src="app/map/map-view.factory.js"></script>
     <script src="app/map/offline-tile.factory.js"></script>
+    <script src="app/map/other-maps.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
