--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -1,30 +1,30 @@
-<ion-view title='Offline Maps'>
+<ion-view title='Offline Basemaps'>
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
     <button ng-click='vm.clearOfflineTile();' class='button button-icon icon ion-trash-b'
-            ng-hide='vm.numOfflineTiles === 0'></button>
+            ng-hide='vm.maps.length === 0'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
-    <div class='padding' ng-show='vm.numOfflineTiles === 0'>
+    <div class='padding' ng-show='vm.maps.length === 0'>
       There are no saved maps.
     </div>
-    <div ng-hide='vm.numOfflineTiles === 0'>
+    <div ng-hide='vm.maps.length === 0'>
       <ion-list>
         <ion-item class='item-text-wrap item-button-right'
                   ng-repeat='map in vm.maps | orderBy: "name"'
                   ng-click='vm.edit(map)'>
           <b>{{ map.name }}</b><br>
-          <small>{{ map.tileArray.length }} tiles, {{ map.size | normalizeBytes }}, {{ map.mapProvider }}<span
-            ng-if='map.date'>, Saved: {{ map.date }}</span></small>
+          <small>{{ map.tileArray.length }} tiles, {{ map.size | normalizeBytes }}, ID: {{ map.mapProvider }}
+            <span ng-if='map.date'>, Saved: {{ map.date }}</span></small>
             <button class='button button-clear button-assertive'
                     ng-click='vm.deleteTiles(map)'>
               <i class='icon ion-minus-circled'></i>
             </button>
         </ion-item>
       </ion-list>
-      <div class='padding' ng-show='vm.maps.length > 1'>
+      <div class='padding' ng-show='vm.maps.length >= 1'>
         Total Number of Saved Tiles: {{ vm.numOfflineTiles }} <br>
         <!-- Total Size of Saved Tiles: {{ vm.offlineTilesSize | normalizeBytes }} <br>
         <small>Note some tiles may be used in more than one saved map so the total number and total size of saved tiles
