refactored maps, offline maps, other maps, archive tiles

--- a/www/app/map/add-map-modal.html
+++ b/www/app/map/add-map-modal.html
@@ -8,8 +8,8 @@
   </ion-header-bar>
   <ion-content class='has-header strabo-form'>
     <label class='item item-input item-stacked-label item-text-wrap'>
-      <span class='input-label'>My Map Name</span>
-      <input type='text' ng-model='vm.data.name'>
+      <span class='input-label'>My Map Title</span>
+      <input type='text' ng-model='vm.data.title'>
     </label>
     <label class='item item-input item-stacked-label item-text-wrap'>
       <span class='input-label'>Map ID</span>
