--- a/www/app/map/archive-tiles.html
+++ b/www/app/map/archive-tiles.html
@@ -17,11 +17,6 @@
       <input type='text' ng-model='vm.map.name' autofocus>
     </ion-input>
 
-    <!-- <ion-checkbox ng-model='vm.map.downloadMacrostrat' ng-show='vm.map.showDownloadMacrostrat'
-                  ng-change='vm.estimateArchiveTile()'>
-      Download Macrostrat-Geologic tiles too?
-    </ion-checkbox> -->
-
     <ion-checkbox ng-model='vm.map.downloadZooms' ng-show='vm.map.showDownloadInnerZooms'
                   ng-change='vm.estimateArchiveTile()'>
       Download inner zooms to zoom {{ vm.map.maxZoom }}?
@@ -30,11 +25,10 @@
     <br>
     Current zoom level: {{ vm.map.currentZoom }}<br>
     Max zoom level available: {{ vm.map.maxZoom }}<br>
-    Total number of saved offline tiles: {{vm.numOfflineTiles}}<br>
-    Total number of tiles requested: {{ vm.tiles.saved.length + vm.tiles.need.length }} <br>
-    Number of requested tiles already saved: {{ vm.tiles.saved.length }} <br>
+    Total number of tiles requested: {{ vm.map.tiles.saved.length + vm.map.tiles.need.length }} <br>
+    Number of requested tiles already saved: {{ vm.map.tiles.saved.length }} <br>
     <br>
-    <b>Number of tiles to download: {{ vm.tiles.need.length }} <br></b>
+    <b>Number of tiles to download: {{ vm.map.tiles.need.length }} <br></b>
 
     <button class='button button-block button-positive' ng-click='vm.submit()'
             ng-disabled='vm.downloading'>
