--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -15,9 +15,9 @@
         <ion-item class='item-text-wrap item-button-right'
                   ng-repeat='map in vm.maps | orderBy: "name"'
                   ng-click='vm.edit(map)'>
-          <b>{{ map.name }}</b><br>
-          <small>{{ map.tileArray.length }} tiles, {{ map.size | normalizeBytes }}, ID: {{ map.mapProvider }}
-            <span ng-if='map.date'>, Saved: {{ map.date }}</span></small>
+          <b>{{ map.name }}</b> <small>(Source: {{ map.title }})</small><br>
+          <small>{{ map.tileArray.length }} tiles,
+            {{ map.size | normalizeBytes }}<span ng-if='map.date'>, Saved: {{ map.date }}</span></small>
             <button class='button button-clear button-assertive'
                     ng-click='vm.deleteTiles(map)'>
               <i class='icon ion-minus-circled'></i>
