--- a/www/index.html
+++ b/www/index.html
@@ -94,6 +94,7 @@
     <script src="app/data-models/data-models.factory.js"></script>
     <script src="app/form/form.factory.js"></script>
     <script src="app/map/coordinate-range.factory.js"></script>
+    <script src="app/map/map.factory.js"></script>
     <script src="app/map/map-draw.factory.js"></script>
     <script src="app/map/map-features.factory.js"></script>
     <script src="app/map/map-layer.factory.js"></script>
