show tabs with data, nests and tags in the spots list

--- a/www/app/spot/spots-filter-modal.html
+++ b/www/app/spot/spots-filter-modal.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
   <ion-header-bar class='bar-dark nav-title-slide-ios7' align-title='center'>
-    <button ng-click='vm.closeModal()' class='button button-icon icon ion-arrow-left-c'></button>
+    <button ng-click='vm.closeFilterModal()' class='button button-icon icon ion-arrow-left-c'></button>
     <h1 class='title'>Filter</h1>
   </ion-header-bar>
   <ion-content class='has-header'>
