--- a/www/app/spot/spots-popover.html
+++ b/www/app/spot/spots-popover.html
@@ -1,6 +1,9 @@
 <ion-popover-view class='fit'>
   <ion-content scroll='false'>
     <ion-list>
+      <ion-item ng-click='vm.setListDetail()'>
+        <i class="icon ion-document-text"></i> Set List Detail
+      </ion-item>
       <ion-item ng-click='vm.deleteAllActiveSpots()'>
         <i class="icon ion-trash-b"></i> Delete All Spots
       </ion-item>
