--- a/www/app/spot/spots.html
+++ b/www/app/spot/spots.html
@@ -17,19 +17,49 @@
       Results are being filtered.
     </div>
     <div class='padding' ng-show='vm.spots.length === 0'>
-      No Spots added to any of the active datasets yet. Add a spot using the '+' button in the top right or by drawing a point, line or polygon on the
+      No Spots added to any of the active datasets yet. Add a spot using the '+' button in the top right or by drawing a
+      point, line or polygon on the
       Main Map page.
     </div>
     <ion-list>
       <ion-item class='item-text-wrap item-button-right'
                 ng-repeat='spot in vm.spotsDisplayed track by spot.properties.id'
                 ng-click='vm.goToSpot(spot.properties.id)'>
-        <img ng-if="spot.geometry.type === 'Point'" class='geometry-icon' src='img/point.png'>
-        <img ng-if="spot.geometry.type === 'LineString'" class='geometry-icon' src='img/line.png'>
-        <img ng-if="spot.geometry.type === 'Polygon'" class='geometry-icon' src='img/polygon.png'>
+        <img ng-if="spot.geometry.type === 'Point' && !spot.properties.image_basemap"
+             class='geometry-icon' src='img/point.png'>
+        <img ng-if="spot.geometry.type === 'LineString' && !spot.properties.image_basemap"
+             class='geometry-icon' src='img/line.png'>
+        <img ng-if="spot.geometry.type === 'Polygon' && !spot.properties.image_basemap"
+             class='geometry-icon' src='img/polygon.png'>
+        <img ng-if="spot.geometry.type === 'Point' && spot.properties.image_basemap"
+             class='geometry-icon' src='img/point-image-basemap.png'>
+        <img ng-if="spot.geometry.type === 'LineString' && spot.properties.image_basemap"
+             class='geometry-icon' src='img/line-image-basemap.png'>
+        <img ng-if="spot.geometry.type === 'Polygon' && spot.properties.image_basemap"
+             class='geometry-icon' src='img/polygon-image-basemap.png'>
         <img ng-if="spot.geometry.type !== 'Point' && spot.geometry.type !== 'LineString' &&
          spot.geometry.type !== 'Polygon'" class='geometry-icon' src='img/question.png'>
         {{spot.properties.name}}
+        <span ng-show='vm.showDetail.tabs'>
+        <span ng-if='spot.properties.orientation_data' class='spot-tabs-on orientation-on'>Orientation</span>
+        <span ng-if='spot.properties._3d_structures' class='spot-tabs-on _3d-structures-on'>3D Structures</span>
+        <span ng-if='spot.properties.images' class='spot-tabs-on images-on'>Images</span>
+        <span ng-if='vm.hasTags(spot.properties.id)' class='spot-tabs-on tags-on'>Tags</span>
+        <span ng-if='spot.properties.samples' class='spot-tabs-on samples-on'>Samples</span>
+        <span ng-if='spot.properties.other_features' class='spot-tabs-on other-features-on'>Other Features</span>
+        <span ng-if='spot.properties.nests' class='spot-tabs-on nests-on'>Nest</span>
+        <span ng-if='spot.properties.inferences' class='spot-tabs-on inferences-on'>Inferences</span>
+        </span>
+        <div ng-show='vm.showDetail.tags'>
+          <span ng-show='vm.hasTags(spot.properties.id)' class='list-sub'>
+            Tags: {{ vm.getTagNames(spot.properties.id) }}
+          </span>
+        </div>
+        <div ng-show='vm.showDetail.nests'>
+          <span ng-show='vm.getNestNames(spot)' class='list-sub'>
+            Nests: {{ vm.getNestNames(spot) }}
+          </span>
+        </div>
         <button class='button button-clear button-assertive'
                 ng-click='vm.deleteSpot(spot)'>
           <i class='icon ion-minus-circled'></i>
