--- a/www/app/spot/spots-list-detail-modal.html
+++ b/www/app/spot/spots-list-detail-modal.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
   <ion-header-bar class='bar-dark nav-title-slide-ios7' align-title='center'>
     <button ng-click='vm.closeDetailModal()' class='button button-icon icon ion-arrow-left-c'></button>
-    <h1 class='title'>Filter</h1>
+    <h1 class='title'>Spots List Detail</h1>
   </ion-header-bar>
   <ion-content class='has-header'>
     <ion-checkbox ng-model="vm.showDetail.tabs">Show Tabs with Data</ion-checkbox>
