added continuous tagging

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -46,7 +46,7 @@
           Spots
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/tags'>
-          Tag Groups
+          Tags
         </ion-item>
         <div class='field-group item item-divider'>
           Maps
