--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -50,7 +50,7 @@ navigation history that also transitions its views in and out.
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.tags"}'
          ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/tags");'>
-        Tag Groups
+        Tags
       </a>
     </span>
     <span ng-show='vm.showTab("samples")'>
