--- a/www/app/project/tag.html
+++ b/www/app/project/tag.html
@@ -1,4 +1,4 @@
-<ion-view title='Tag Group'>
+<ion-view title='Tag'>
   <ion-nav-buttons side='left'>
     <button ng-hide='vm.currentSpot' ng-click='vm.go("/app/tags");'
             class='button button-icon icon ion-arrow-left-c'></button>
