add tags from map

--- a/www/app/map/map-popover.html
+++ b/www/app/map/map-popover.html
@@ -8,7 +8,7 @@
         <i class="icon ion-archive"></i> Save Map for Offline Use
       </ion-item>
       <ion-item ng-click='vm.groupSpots()'>
-        <i class="icon ion-grid"></i> Create a Nest
+        <i class="icon ion-pricetags"></i> Add Tag(s) to Spot(s)
       </ion-item>
     </ion-list>
   </ion-content>
