--- a/www/app/project/tags.html
+++ b/www/app/project/tags.html
@@ -22,7 +22,7 @@
                 ng-repeat='tag in vm.tags | orderBy:"name" track by tag.id'
                 ng-click='vm.goToTag(tag.id)'>
         <b>{{tag.name}}</b>
-        <span ng-if='tag.categorization'>{{ tag.categorization }}</span>
+        <span ng-if='tag.categorization'>{{ vm.getTagTypeLabel(tag.categorization) }}</span>
         <small>({{ tag.spots.length || 0 }}
           <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots)</span>
           <span ng-if='tag.spots.length === 1'>Spot)</span>
