--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <script src="lib/papaparse.min.js"></script>
 
     <!-- turf -->
-    <script src="lib/turf/turf.js"></script>
+    <script src="lib/turf/turf.min.js"></script>
 
     <!-- Base64 Encoding -->
     <script src="lib/base64.js"></script>
